test/tests/stages/16_characters_and_strings/invalid_types/char_and_uchar_conflict.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(foo)
  (
  unsigned
  char
  identifier(c)
  )
  {
  return
  identifier(c)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(0)
  )
  ;
  }
  int
  identifier(foo)
  (
  char
  identifier(c)
  )
  ;
